# hlstate-rs

./: Cargo.toml  README.md
crates/httpd/: Cargo.toml  README.md  config.toml
crates/httpd/src/: argument.rs  config.rs  feed.rs  global.rs  main.rs  meta.rs  scrape.rs
crates/httpd/templates/: index.html.tera  layout.html.tera
crates/mysql/: Cargo.toml  LICENSE  README.md  database.mwb
crates/mysql/src/: connection.rs  lib.rs  table.rs  transaction.rs
