[package]
name = "hlstate-httpd"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Web stats for Xash3D servers, based on Rocket engine"
keywords = ["hlstate", "half-life", "xash3d", "http", "server"]
categories = ["parsing", "text-processing", "value-formatting"]
repository = "https://github.com/YGGverse/hlstate-rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
#mysql = { package = "hlstate-mysql", version = "0.1.0", path = "../mysql" }
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"